# langchain-docker

./: README.md  compose.yaml
langchain/: .gitignore  Dockerfile  index_practice.py  pyproject.toml
langchain-docker-unity/: NOTICE.md
langchain-docker-unity/Assets/Mochineko/LangChainDockerUnity/: AgentResponse.cs  ConversationAgentRequest.cs  LangChainDockerAPI.cs  Mochineko.LangChainDockerUnity.asmdef  VectorStoreAgentRequest.cs
langchain-docker-unity/Assets/Mochineko/LangChainDockerUnity.Samples/: DemoScene.unity  LangChainDockerAPIDemo.cs  Mochineko.LangChainDockerUnity.Samples.asmdef  PolicyFactory.cs
langchain-docker-unity/Assets/Mochineko/LangChainDockerUnity.Tests/: LangChainDockerAPITest.cs  Mochineko.LangChainDockerUnity.Tests.asmdef
langchain-docker-unity/ProjectSettings/: ProjectSettings.asset  RiderScriptEditorPersistedState.asset
langchain/src/: agent_with_google_search.py  chat_completion_practice.py  conversation_knowledge_graph_memory_practice.py  conversational_agent.py  index_practice.py  main.py
langchain/src/agents/: conversational_agent.py
langchain/src/memories/: vector_store_memory.py
